fixing overflow error on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-html,
 body {
     overflow-x: hidden;
     background-color: rgb(20, 20, 20);
@@ -141,7 +140,7 @@ video {
     animation-duration: 3s;
     animation-iteration-count: infinite;
     position: absolute;
-    width: 100%;
+    width: 95%;
     z-index: 1;
 }
 
